DECAF-67 - update logos

--- a/www/index.html
+++ b/www/index.html
@@ -27,7 +27,7 @@
   <body class="font-inter">
     <!-- Hero Section -->
     <section
-      class="min-h-screen bg-gradient-to-br from-purple-600 via-pink-500 to-orange-400 relative overflow-hidden"
+      class="min-h-screen bg-gradient-to-br from-purple-600 via-pink-500 to-orange-400 dark:from-black dark:to-gray-900 relative overflow-hidden"
     >
       <!-- Navigation -->
       <nav class="relative z-10 w-full px-16 py-6">
@@ -1305,9 +1305,9 @@
                 <!-- Logo -->
                 <div class="flex items-center space-x-2">
                   <div
-                    class="w-18 h-18 bg-gradient-to-br from-purple-600 to-pink-500 rounded-2xl flex items-center justify-center"
+                    class="w-18 h-18 flex items-center justify-center"
                   >
-                    <img src="/assets/logo-footer.png" alt="Decaf Logo" />
+                    <img src="assets/logo_short.svg" alt="Decaf Logo" /> 
                   </div>
                 </div>
                 <!-- Description -->
