DECAF-178 - add marca-180x180.svg asset

--- a/www/index.html
+++ b/www/index.html
@@ -34,7 +34,7 @@
         <div class="flex items-center justify-between">
           <!-- Logo -->
           <div class="flex items-center space-x-2">
-            <img src="assets/decaf-logo-white.svg" alt="Decaf Logo" />
+            <img src="assets/logo_contrast.svg" alt="Decaf Logo" />
           </div>
 
           <!-- Navigation Links -->
@@ -1307,7 +1307,7 @@
                   <div
                     class="w-18 h-18 flex items-center justify-center"
                   >
-                    <img src="assets/decaf-logo-white.svg" alt="Decaf Logo" />
+                    <img src="assets/logo1.png" alt="Decaf Logo" />
                   </div>
                 </div>
                 <!-- Description -->
