DECAF-178 - refactor locale initialization and optimize JSON structure for nested keys

--- a/www/index.html
+++ b/www/index.html
@@ -219,35 +219,35 @@
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
             src="https://tailwindcss.com/plus-assets/img/logos/158x48/transistor-logo-gray-900.svg"
-            data-locale-attr="alt:logo_cloud.brand.transistor" alt="logo_cloud.brand.transistor"
+            data-locale-attr="alt:logo_cloud.brands.0" alt="logo_cloud.brands.0"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
             src="https://tailwindcss.com/plus-assets/img/logos/158x48/reform-logo-gray-900.svg"
-            data-locale-attr="alt:logo_cloud.brand.reform" alt="logo_cloud.brand.reform"
+            data-locale-attr="alt:logo_cloud.brands.1" alt="logo_cloud.brands.1"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain lg:col-span-1"
             src="https://tailwindcss.com/plus-assets/img/logos/158x48/tuple-logo-gray-900.svg"
-            data-locale-attr="alt:logo_cloud.brand.tuple" alt="logo_cloud.brand.tuple"
+            data-locale-attr="alt:logo_cloud.brands.2" alt="logo_cloud.brands.2"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 max-h-12 w-full object-contain sm:col-start-2 lg:col-span-1"
             src="https://tailwindcss.com/plus-assets/img/logos/158x48/savvycal-logo-gray-900.svg"
-            data-locale-attr="alt:logo_cloud.brand.savvycal" alt="logo_cloud.brand.savvycal"
+            data-locale-attr="alt:logo_cloud.brands.3" alt="logo_cloud.brands.3"
             width="158"
             height="48"
           />
           <img
             class="col-span-2 col-start-2 max-h-12 w-full object-contain sm:col-start-auto lg:col-span-1"
             src="https://tailwindcss.com/plus-assets/img/logos/158x48/statamic-logo-gray-900.svg"
-            data-locale-attr="alt:logo_cloud.brand.statamic" alt="logo_cloud.brand.statamic"
+            data-locale-attr="alt:logo_cloud.brands.4" alt="logo_cloud.brands.4"
             width="158"
             height="48"
           />
@@ -368,11 +368,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card1.title">
-                features.card1.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.0.title">
+                features.cards.0.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card1.description">
-                features.card1.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.0.description">
+                features.cards.0.description
               </p>
             </div>
           </div>
@@ -437,11 +437,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card2.title">
-                features.card2.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.1.title">
+                features.cards.1.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card2.description">
-                features.card2.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.1.description">
+                features.cards.1.description
               </p>
             </div>
           </div>
@@ -498,11 +498,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card3.title">
-                features.card3.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.2.title">
+                features.cards.2.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card3.description">
-                features.card3.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.2.description">
+                features.cards.2.description
               </p>
             </div>
           </div>
@@ -567,11 +567,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card2.title">
-                features.card2.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.1.title">
+                features.cards.1.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card2.description">
-                features.card2.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.1.description">
+                features.cards.1.description
               </p>
             </div>
           </div>
@@ -628,11 +628,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card3.title">
-                features.card3.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.2.title">
+                features.cards.2.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card3.description">
-                features.card3.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.2.description">
+                features.cards.2.description
               </p>
             </div>
           </div>
@@ -726,11 +726,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card1.title">
-                features.card1.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.0.title">
+                features.cards.0.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card1.description">
-                features.card1.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.0.description">
+                features.cards.0.description
               </p>
             </div>
           </div>
@@ -795,11 +795,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card2.title">
-                features.card2.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.1.title">
+                features.cards.1.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card2.description">
-                features.card2.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.1.description">
+                features.cards.1.description
               </p>
             </div>
           </div>
@@ -856,11 +856,11 @@
               </div>
             </div>
             <div class="flex flex-col gap-4">
-              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.card3.title">
-                features.card3.title
+              <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="features.cards.2.title">
+                features.cards.2.title
               </h3>
-              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.card3.description">
-                features.card3.description
+              <p class="text-gray-600 text-base leading-relaxed" data-locale="features.cards.2.description">
+                features.cards.2.description
               </p>
             </div>
           </div>
@@ -1191,31 +1191,31 @@
             <div class="flex flex-col gap-12">
               <!-- FAQ 1 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q1.title">
-                  faq.q1.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.0.title">
+                  faq.items.0.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q1.body">
-                  faq.q1.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.0.body">
+                  faq.items.0.body
                 </p>
               </div>
 
               <!-- FAQ 2 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q2.title">
-                  faq.q2.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.1.title">
+                  faq.items.1.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q2.body">
-                  faq.q2.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.1.body">
+                  faq.items.1.body
                 </p>
               </div>
 
               <!-- FAQ 3 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q3.title">
-                  faq.q3.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.2.title">
+                  faq.items.2.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q3.body">
-                  faq.q3.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.2.body">
+                  faq.items.2.body
                 </p>
               </div>
             </div>
@@ -1224,31 +1224,31 @@
             <div class="flex flex-col gap-12">
               <!-- FAQ 4 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q4.title">
-                  faq.q4.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.3.title">
+                  faq.items.3.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q4.body">
-                  faq.q4.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.3.body">
+                  faq.items.3.body
                 </p>
               </div>
 
               <!-- FAQ 5 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q5.title">
-                  faq.q5.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.4.title">
+                  faq.items.4.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q5.body">
-                  faq.q5.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.4.body">
+                  faq.items.4.body
                 </p>
               </div>
 
               <!-- FAQ 6 -->
               <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.q6.title">
-                  faq.q6.title
+                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.5.title">
+                  faq.items.5.title
                 </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.q6.body">
-                  faq.q6.body
+                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.5.body">
+                  faq.items.5.body
                 </p>
               </div>
             </div>
