DECAF-178 - replace static text with locale keys in index.html for enhanced localization

--- a/www/index.html
+++ b/www/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>document.title</title>
+    <title></title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -1055,15 +1055,13 @@
 
               <!-- Main Content -->
               <div class="flex flex-col gap-6">
-                <h2
+                <h2 data-locale="showcase.grade.title"
                   class="font-jakarta font-bold text-5xl text-gray-900 leading-tight"
                 >
-                  Track student grades.
+                  showcase.grade.title
                 </h2>
-                <p class="text-gray-600 text-lg leading-relaxed">
-                  Add, view, and remove tasks effortlessly. Use the class
-                  methods addTask and removeTask to manage your task list
-                  dynamically and display the results.
+                <p class="text-gray-600 text-lg leading-relaxed" data-locale="showcase.task.description">
+                  showcase.task.description
                 </p>
               </div>
             </div>
