DECAF-178 - modularize content rendering; introduce DecafContent utility and refactor locale logic

--- a/www/index.html
+++ b/www/index.html
@@ -1567,6 +1567,7 @@
         </div>
       </div>
     </footer>
+    <script src="content.js"></script>
     <script src="locale.js"></script>
     <script src="banner.js"></script>
   </body>
