DECAF-18 - enhance brand grid rendering; add support for dynamic brand logos with SVG and image sources

--- a/www/index.html
+++ b/www/index.html
@@ -1102,10 +1102,8 @@
                 >
                   showcase.task.title
                 </h2>
-                <p class="text-gray-600 text-lg leading-relaxed">
-                  Add, view, and remove tasks effortlessly. Use the class
-                  methods addTask and removeTask to manage your task list
-                  dynamically and display the results.
+                <p class="text-gray-600 text-lg leading-relaxed" data-locale="showcase.task.description">
+                  showcase.task.description
                 </p>
               </div>
             </div>
@@ -1187,70 +1185,10 @@
           <!-- FAQ Grid -->
           <div class="grid grid-cols-1 lg:grid-cols-2 gap-14 w-full">
             <!-- Left Column -->
-            <div id="faq-left" class="flex flex-col gap-12">
-              <!-- FAQ 1 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.0.title">
-                  faq.items.0.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.0.body">
-                  faq.items.0.body
-                </p>
-              </div>
-
-              <!-- FAQ 2 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.1.title">
-                  faq.items.1.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.1.body">
-                  faq.items.1.body
-                </p>
-              </div>
-
-              <!-- FAQ 3 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.2.title">
-                  faq.items.2.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.2.body">
-                  faq.items.2.body
-                </p>
-              </div>
-            </div>
+            <div id="faq-left" class="flex flex-col gap-12"></div>
 
             <!-- Right Column -->
-            <div id="faq-right" class="flex flex-col gap-12">
-              <!-- FAQ 4 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.3.title">
-                  faq.items.3.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.3.body">
-                  faq.items.3.body
-                </p>
-              </div>
-
-              <!-- FAQ 5 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.4.title">
-                  faq.items.4.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.4.body">
-                  faq.items.4.body
-                </p>
-              </div>
-
-              <!-- FAQ 6 -->
-              <div class="flex flex-col gap-4">
-                <h3 class="font-jakarta font-bold text-lg text-gray-900" data-locale="faq.items.5.title">
-                  faq.items.5.title
-                </h3>
-                <p class="text-gray-600 text-base leading-relaxed" data-locale="faq.items.5.body">
-                  faq.items.5.body
-                </p>
-              </div>
-            </div>
+            <div id="faq-right" class="flex flex-col gap-12"></div>
           </div>
         </div>
       </div>
