DECAF-178 - enhance brand grid rendering; add support for dynamic brand logos with SVG and image sources

--- a/www/index.html
+++ b/www/index.html
@@ -1470,6 +1470,8 @@
       </div>
     </footer>
     <script src="content.js"></script>
+    <script src="marquee.js"></script>
+    <script src="marquee-init.js"></script>
     <script src="locale.js"></script>
     <script src="banner.js"></script>
   </body>
