--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
           <!-- Navigation Links -->
           <div class="hidden md:flex items-center space-x-8">
             <a data-locale="nav.modules"
-              href="#"
+              href="modules.html"
               class="text-white hover:text-white/80 transition-colors"
             >
               nav.modules
@@ -121,11 +121,11 @@
         <div
           class="flex flex-col sm:flex-row items-center space-y-4 sm:space-y-0 sm:space-x-4 mb-16"
         >
-          <button data-locale="hero.cta.explore_modules"
+          <a data-locale="hero.cta.explore_modules" href="modules.html"
             class="bg-white text-gray-900 px-8 py-4 rounded-full font-medium hover:bg-gray-100 transition-all duration-300 shadow-lg"
           >
             hero.cta.explore_modules
-          </button>
+          </a>
           <button data-locale="hero.cta.documentation"
             class="bg-transparent border border-white/20 text-white px-8 py-4 rounded-full font-medium hover:bg-white/10 transition-all duration-300 backdrop-blur-sm"
           >
