DECAF-178 - introduce module validation, aggregation, and scaffolding features with tests

--- a/www/examples.html
+++ b/www/examples.html
@@ -59,7 +59,7 @@
 
     <script src="content.js"></script>
     <script src="locale.js"></script>
+    <script src="banner.js"></script>
     <script src="examples.js"></script>
   </body>
   </html>
-
