--- a/www/index.html
+++ b/www/index.html
@@ -1474,5 +1474,7 @@
     <script src="marquee-init.js"></script>
     <script src="locale.js"></script>
     <script src="banner.js"></script>
+
+    <script src="index.js"></script>
   </body>
-</html>
+  </html>
